Fix footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,10 +16,20 @@
 }
 
 .footer_content__menu {
-
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    spacing: 2;
 }
 
 .footer_content__menu_button {
     color: #fff;
     margin: 0 0.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer_content__menu {
+        flex-direction: column;
+    }
 }
